# ftl-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASING.md  memory.md  spin.toml
examples/demo/: .gitignore  README.md  spin-auth.toml  spin.toml
examples/demo/add/: Cargo.toml
examples/demo/add/src/: lib.rs
examples/demo/calculator-ts/: package-lock.json  package.json  tsconfig.json
examples/demo/calculator-ts/src/: index.ts
examples/demo/echo/: Cargo.toml
examples/demo/echo-js/: package-lock.json  package.json
examples/demo/echo-js/src/: index.js
examples/demo/echo-rs/: Cargo.toml  test_schema.rs
examples/demo/echo-rs/src/: lib.rs
examples/demo/echo-ts/: package-lock.json  package.json  test-type.ts  tsconfig.json
examples/demo/echo-ts/src/: index.ts
examples/demo/echo/src/: lib.rs
examples/demo/image-demo/: Cargo.toml
examples/demo/image-demo/src/: lib.rs
examples/demo/weather-rs/: Cargo.toml
examples/demo/weather-rs/src/: lib.rs
examples/demo/weather-ts/: package-lock.json  package.json  tsconfig.json
examples/demo/weather-ts/src/: index.ts
examples/gateway-demo/: spin.toml
examples/gateway-demo/add/: Cargo.toml
examples/gateway-demo/add/src/: lib.rs
examples/gateway-demo/echo/: Cargo.toml
examples/gateway-demo/echo-js/: package.json
examples/gateway-demo/echo-js/src/: index.js
examples/gateway-demo/echo/src/: lib.rs
examples/gateway-demo/image-demo/: Cargo.toml
examples/gateway-demo/image-demo/src/: lib.rs
mcp-components-demo/: spin.toml
mcp-components-demo/add/src/: lib.rs
mcp-components-demo/echo/: Cargo.toml
mcp-components-demo/echo-js/src/: index.js
mcp-components-demo/echo/src/: lib.rs
mcp-components-demo/mcp-gateway/: Cargo.toml
mcp-components-demo/mcp-gateway/src/: gateway.rs  lib.rs  mcp_types.rs
mcp-components-demo/tools-list/: Cargo.toml
mcp-components-demo/tools-list/src/: lib.rs
mcp-gateway/: Cargo.toml
mcp-gateway/src/: gateway.rs
mcp-router/: Cargo.toml
mcp-router/src/: lib.rs
mcp-test-runner/: Cargo.toml
mcp-test-runner/src/: main.rs
quote_plugin/: Cargo.toml  spin.toml
quote_plugin/src/: lib.rs
src/ftl-auth-gateway/: Cargo.toml  Makefile  README.md  clippy.toml  spin.toml
src/ftl-auth-gateway/src/: auth.rs  config.rs  handlers.rs  jwks.rs  lib.rs  logging.rs  metadata.rs  providers.rs  proxy.rs
src/ftl-auth-gateway/tests/: Cargo.toml
src/ftl-auth-gateway/tests/src/: lib.rs
src/ftl-mcp-gateway/: .rustfmt.toml  Cargo.toml  Makefile  README.md
src/ftl-mcp-gateway/src/: gateway.rs  lib.rs  mcp_types.rs
src/ftl-sdk-rs/: Cargo.toml  Makefile  README.md  clippy.toml
src/ftl-sdk-rs-macros/: Cargo.toml  Makefile  README.md
src/ftl-sdk-rs-macros/src/: lib.rs
src/ftl-sdk-rs/.cargo/: config.toml
src/ftl-sdk-rs/src/: lib.rs
src/ftl-sdk-rs/tests/: integration_test.rs
src/ftl-sdk-ts/: .eslintignore  .eslintrc.js  .npmignore  .prettierrc  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
src/ftl-sdk-ts/src/: index.ts  json-schema.ts
src/ftl-sdk-ts/tests/: index.test.ts
src/mcp-gateway/: Cargo.toml
src/mcp-gateway/src/: mcp_types.rs
templates/: README.md
templates/ftl-auth-gateway/content/: AUTH_SETUP.md
templates/ftl-auth-gateway/metadata/: spin-template.toml
templates/ftl-auth-gateway/metadata/snippets/: component.txt
templates/ftl-mcp-rust/content/: Cargo.toml
templates/ftl-mcp-rust/content/src/: lib.rs
templates/ftl-mcp-rust/metadata/: spin-template.toml
templates/ftl-mcp-rust/metadata/snippets/: component.txt
templates/ftl-mcp-server/content/: README.md  spin.toml
templates/ftl-mcp-server/metadata/: spin-template.toml
templates/ftl-mcp-ts/content/: package.json
templates/ftl-mcp-ts/content/src/: index.ts
templates/ftl-mcp-ts/metadata/: spin-template.toml
templates/ftl-mcp-ts/metadata/snippets/: component.txt
wasmcp/: Cargo.toml
wasmcp-macros/: Cargo.toml
wasmcp-macros/src/: lib.rs
wasmcp/src/: errors.rs  helpers.rs  lib.rs  traits.rs  types.rs
weather_new/: Cargo.toml  spin.toml
weather_new/src/: lib.rs
