[package]
name = "mcp-gateway"
authors = ["bowlofarugula <bowlofarugula@gmail.com>"]
description = "MCP gateway component"
version = "0.0.1"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }

[workspace]
