[package]
name = "wasmcp-macros"
version = "0.1.0"
edition = "2021"
authors = ["WASMCP Contributors"]
description = "Procedural macros for the WASMCP SDK"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }