[package]
name = "wasmcp"
version = "0.1.0"
edition = "2021"
authors = ["WASMCP Contributors"]
description = "SDK for building Model Context Protocol (MCP) plugins on Spin WebAssembly"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/wasmcp"
keywords = ["mcp", "wasm", "spin", "sdk"]
categories = ["wasm", "web-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
spin-sdk = "4.0.0"
async-trait = "0.1"
wasmcp-macros = { path = "../wasmcp-macros" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }