[package]
name = "weather-new"
authors = ["Corey Ryan <corey@coreyr.com>"]
description = ""
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "4.0.0"
wasmcp = { path = "../wasmcp" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

[workspace]
# Exclude this from parent workspace
