[package]
name = "ftl-sdk-macros"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Procedural macros for the FTL SDK"
repository = "https://github.com/fastertools/ftl-mcp"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
