[package]
name = "echo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ftl-sdk = { path = "../../../src/ftl-sdk-rs", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spin-sdk = "3.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "fastertools:echo-rs"